src/components/card/card.module.scss
@use '../../lib/styles' as *;

.card {
  display: flex;
  align-items: flex-start;
  width: 150px;

  @media (min-width: $tablet-portrait) {
    width: 160px;
  }

  @media (min-width: $desktop) {
    width: 190px;
  }

  &__button {
    display: inline-block;
    box-sizing: border-box;
    width: 100%;
    margin: 0;
    padding: 0;
    color: inherit;
    font: inherit;
    text-align: center;
    text-decoration: none;
    background: none;
    border: 0;
    border: 1px solid transparent;
    border-radius: 0;
    outline: none;
    cursor: pointer;
    transition: transform 0.1s;
    user-select: none;

    &:focus,
    &:hover {
      transform: scale(1.1);
      transition: transform 0.1s;
    }
  }

  &__image {
    width: 120px;
    height: 120px;
    border-radius: 5px;

    @media (min-width: $tablet-portrait) {
      width: 100%;
      height: auto;
    }

    &_with-placeholder {
      display: none;
    }
  }

  &__placeholder {
    width: 120px;
    height: 120px;
  }

  &__name {
    display: flex;
    margin: 4px 0 0;
    overflow: hidden;
    color: $white;
    text-overflow: ellipsis;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
  }
}

